--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Megakit - HTML5 Theme</title>
+        <title> Ramanand Singh</title>
         <meta name="keywords" content="HTML5 Theme" />
-        <meta name="description" content="Megakit - HTML5 Theme">
+        <meta name="description" content="Ramanand Singh">
         <meta name="author" content="keenthemes.com">
 
         <!-- Web Fonts -->
@@ -796,3 +796,4 @@
     </body>
     <!-- End Body -->
 </html>
+
